--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+<!-- TOP MENU NAVIGATION -->
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+
+				<a class="brand pull-left" href="#">
+				FlexApp
+				</a>
+
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a>
+
+				<div class="nav-collapse collapse">
+					<ul id="nav-list" class="nav pull-right">
+						<li><a href="#home">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#updates">Updates</a></li>
+						<li><a href="#screenshots">Screenshots</a></li>
+						<li><a href="#contact">Contact</a></li>
+						<li><a href="#contact">logout</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</div>
    <!-- MAIN CONTENT -->
 	<div class="container content container-fluid" id="home">
 
