--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,6 +2,30 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!-- TOP MENU NAVIGATION -->
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+
+				<a class="brand pull-left" href="#">
+				FlexApp
+				</a>
+
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a>
+
+				<div class="nav-collapse collapse">
+					<ul id="nav-list" class="nav pull-right">
+						<li><a href="/index">Registration</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</div>
  <!-- MAIN CONTENT -->
 	<div class="container content container-fluid" id="home">
         <div class="row-fluid">
