home pc - добавил регистрацию, вход и выход пользователей

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 
 		<!-- CHANGE THIS TITLE TAG -->
 		{% if title %}
-		<title>>{{title}} - отопление</title>
+		<title>{{title}} - отопление</title>
 		{% else %}
     	<title>Система Отопления</title>
     	{% endif %}
