--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,14 +16,19 @@
 				</a>
 
 				<div class="nav-collapse collapse">
+					<ul class="nav pull-right">
+						{% if g.user.is_authenticated %}
+        				<li><a href="/logout">Logout</a></li>
+        				{% endif %}
+					</ul>
 					<ul id="nav-list" class="nav pull-right">
 						<li><a href="#home">Home</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#updates">Updates</a></li>
 						<li><a href="#screenshots">Screenshots</a></li>
 						<li><a href="#contact">Contact</a></li>
-						<li><a href="#contact">logout</a></li>
 					</ul>
+
 				</div>
 
 			</div>
