--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,8 +18,8 @@
 				</a>
 
 				<div class="nav-collapse collapse">
-					<ul id="nav-list" class="nav pull-right">
-						<li><a href="/index">Registration</a></li>
+					<ul class="nav pull-right">
+						<li><a href="{{ url_for('registration') }}">Registration</a></li>
 					</ul>
 				</div>
 
