--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -18,8 +18,8 @@
 				</a>
 
 				<div class="nav-collapse collapse">
-					<ul id="nav-list" class="nav pull-right">
-						<li><a href="/login">Login</a></li>
+					<ul class="nav pull-right">
+						<li><a href= "{{ url_for('login') }}">Login</a></li>
 					</ul>
 				</div>
 
