--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -8,7 +8,7 @@
 			<div class="container">
 
 				<a class="brand pull-left" href="#">
-				FlexApp
+				Система отопления
 				</a>
 
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -19,7 +19,7 @@
 
 				<div class="nav-collapse collapse">
 					<ul class="nav pull-right">
-						<li><a href= "{{ url_for('login') }}">Login</a></li>
+						<li><a href= "{{ url_for('login') }}">Вход</a></li>
 					</ul>
 				</div>
 
@@ -33,7 +33,7 @@
                 <fieldset>
                     <div class="control-group">
                         <div class="controls">
-                            <h1>Registration</h1>
+                            <h1>Регистрация</h1>
                             {{form.hidden_tag()}}
                             Введите свой логин:<br>
                             {{form.user(size=20)}}<br>
