work pc добавил в шаблоны формы

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -165,13 +165,7 @@
 
 				<!-- UPDATES & RELEASE NOTES -->
 
-				<h3 class="version">Version 1.2</h3>
-				<span class="release-date">Released on April 28th, 2012</span>
-				<ul>
-					<li><span class="label new">NEW</span>Challenge a Friend</li>
-					<li><span class="label fix">FIX</span>Fixed 'Resume Game' Bug</li>
-				</ul>
-				<hr>
+				<h2>Пример</h2>
 
 				<h3 class="version">Version 1.1</h3>
 				<span class="release-date">Released on January 28th, 2012</span>
