--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge; charset=utf-8" />
 
 		<!-- CHANGE THIS TITLE TAG -->
 		{% if title %}
@@ -66,7 +66,13 @@
 	<script src="static/js/bootstrap-scrollspy.js"></script>
 	<script src="static/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
 	<script src="static/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+	<!-- web socket -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+
 	<script src="static/js/init.js"></script>
+
+
+
 
 </body>
 </html>
