home pc - добавил вывод сообщения об ошибке ввода временного интервала

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -142,7 +142,8 @@
 						<option value="sunday">Воскресенье</option>
 					</select><br>
                     <label for="set_time1">Установить временной интервал с:</label>
-					<input type="time" name="time_data" id="set_time1" placeholder="set time">
+					<input type="time" name="time_data" id="set_time1" placeholder="set time"><br>
+					<span id="log_err"></span>
                     <label for="set_time2">по:</label>
 					<input type="time" name="time_data" id="set_time2" placeholder="set time"><br>
                     <label for="slider1">Установить температуру: <output for="slider1" id="volume"></output>°C:</label>
