--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,7 +130,7 @@
 					</a>
 				</h2>
                 <h3>Суточное программирование</h3>
-				<form id="emit" method="POST" action='#'>
+				<form id="emit" name=thisForm method="POST" action='#'>
 					<label for="selectDay">Выбрать день недели</label>
 					<select name="daysOfTheWeek" id="selectDay">
 						<option value="monday" selected>Понедельник</option>
